# smart-job-parser

./: .env.example  .env.test  .gitignore  .pre-commit-config.yaml  .secrets.baseline  API_README.md  DEPLOYMENT.md  Dockerfile  LICENSE  LOGGING.md  Makefile  README.md  config.py  logging_config.py  pyproject.toml  render.yaml  requirements.development.txt  requirements.txt  settings.toml  start_api.py  test_api_examples.py
.github/workflows/: ci-cd.yml
api/: main.py
api/routers/: text_processor.py
app/api/v1/endpoints/: jobs.py
src/: config.py  logger.py  main.py
src/api/: dependencies.py
src/api/routers/: debug_router.py  job_search_router.py  text_processor_router.py
src/common/: http_base_client.py
src/data_transformer/: __init__.py  base.py  jsearch_transformer.py  service.py
src/data_transformer/transformers/: jsearch_transformer.py
src/job_searcher/: interface.py  models.py  service.py
src/job_searcher/vendors/jsearch/: __init__.py  client.py  models.py  vendor.py
src/services/: job_search_service.py
src/text_processor/: text_processor.py  text_processor_service.py
src/vector_store/: interface.py  models.py  service.py
src/vector_store/stores/: memory_store.py  pinecone_store.py
src/vector_store/vector_transformer/: service.py
tests/: conftest.py  test_config.py  test_example.py  test_logger.py
tests/factories/: job_searcher.py  search_vendors.py  vector_store.py
tests/fixtures/: jsearch_result.py  pinecone_search_result.py
tests/job_searcher/vendors/jsearch/: test_vendor.py
tests/src/: test_text_processor.py
tests/src/data_transformer/: conftest.py  test_jsearch_transformer.py
tests/src/job_searcher/: conftest.py  test_service.py
tests/src/job_searcher/vendors/jsearch/: test_vendor.py
tests/src/text_processor/: test_text_processor.py
tests/src/vector_store/: __init__.py  conftest.py  test_models.py  test_service.py
tests/src/vector_store/stores/: __init__.py  test_memory_store.py  test_pinecone_store.py
tests/src/vector_store/vector_transformer/: test_transformerr.py
